gccida/g2/dwarf2out_cfi_label
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dwarf2out_cfi_label/src/dwarf2out.c:1006:6: error: use of undeclared identifier 'label_num_59'
v0 = label_num_59++; 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dwarf2out_cfi_label/src/dwarf2out.c:1007:10: error: use of undeclared identifier 'label_58'; did you mean 'label_rtx'?
sprintf( label_58, "*.%s%u", "LCFI", v0); 
         ^~~~~~~~
         label_rtx
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dwarf2out_cfi_label/src/expr.h:580:12: note: 'label_rtx' declared here
extern rtx label_rtx PARAMS ((tree));
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dwarf2out_cfi_label/src/dwarf2out.c:1008:30: error: use of undeclared identifier 'label_58'; did you mean 'label_rtx'?
assemble_name( asm_out_file, label_58); 
                             ^~~~~~~~
                             label_rtx
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dwarf2out_cfi_label/src/expr.h:580:12: note: 'label_rtx' declared here
extern rtx label_rtx PARAMS ((tree));
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dwarf2out_cfi_label/src/dwarf2out.c:1010:8: error: use of undeclared identifier 'label_58'; did you mean 'label_rtx'?
return label_58; 
       ^~~~~~~~
       label_rtx
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dwarf2out_cfi_label/src/expr.h:580:12: note: 'label_rtx' declared here
extern rtx label_rtx PARAMS ((tree));
           ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dwarf2out_cfi_label/src/obj/dwarf2out.o] Error 1
